CSS fix for product list, some spacings were off... (#279)
* CSS fix for product list, some spacings were off...

* Minor version up

--- a/component-lib/src/molecules/ProductList/ProductList.pcss
+++ b/component-lib/src/molecules/ProductList/ProductList.pcss
@@ -48,15 +48,15 @@
                 display: block;
                 position: absolute;
                 left: -100px;
-                
+
                 width: 200%;
                 height: 900%;
-               
+
                 z-index: 0;
                 animation: promo-animation linear 6s infinite;
                 background: var(--core-purple) url('{{assetPath}}/pebbles/pebble-6.svg') no-repeat -300px -300px;
                 background-size: 1600px;
-                
+
             }
             &:after {
                 content: ' ';
@@ -98,23 +98,24 @@
         color: black;
         font-family: "pebble";
         font-size: 1.5rem;
-        line-height: 1;
+        line-height: 1.5rem;
         text-decoration: none;
         text-transform: uppercase;
 
         @media all and (max-width: 30em) {
             font-size: 1.2rem;
+            line-height: 1.2rem;
         }
     }
 
     &__item-description {
         color: black;
         text-decoration: none;
-        line-height: inherit;
-        
+        line-height: 1.3rem;
+        margin-top: .3rem;
         @media all and (max-width: 30em) {
-            line-height: 1rem;
             font-size: .85em;
+            line-height: 1rem;
         }
     }
 }
